bugfix: quick z-index fix in header and canvas

--- a/src/shared/components/canvas/Canvas.css
+++ b/src/shared/components/canvas/Canvas.css
@@ -7,6 +7,6 @@
 }
 
 .notTouchable {
-	z-index: 100;
+	z-index: 1;
 	pointer-events: none;
 }
