--- a/src/shared/components/header/Header.css
+++ b/src/shared/components/header/Header.css
@@ -2,6 +2,7 @@
 
 .header {
 	position: fixed;
+	z-index: 2;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
